# Conlanger

./: .gitignore  CMakeLists.txt  License  setup
include/: Decoder.hpp  Dictionary.hpp  Executer.hpp  Lexeme.hpp  Parser.hpp  Sanitizer.hpp  Spliter.hpp
src/: Decoder.cpp  Dictionary.cpp  Executer.cpp  Lexeme.cpp  Parser.cpp  Sanitizer.cpp  Spliter.cpp  main.cpp
